--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,11 @@
     "angular-mocks": "~1.2.1",
     "requirejs": "~2.1.9",
     "requirejs-text": "~2.0.10",
-    "html5-boilerplate": "~4.3.0"
+    "html5-boilerplate": "~4.3.0",
+    "angular-ui-utils": "~0.1.1",
+    "angular-ui-router": "~0.2.10",
+    "angular-bootstrap": "~0.11.0",
+    "bootstrap": "~3.2.0",
+    "restangular": "~1.4.0"
   }
 }
