--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-ui-router": "~0.2.10",
     "angular-bootstrap": "~0.11.0",
     "bootstrap": "~3.2.0",
-    "restangular": "~1.4.0"
+    "restangular": "~1.4.0",
+    "angular-grid": "~2.0.12"
   }
 }
