--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular-bootstrap": "~0.11.0",
     "bootstrap": "~3.2.0",
     "restangular": "~1.4.0",
-    "angular-grid": "~2.0.12"
+    "angular-grid": "~2.0.12",
+    "angular-ui-select2": "~0.0.5"
   }
 }
